# crewai-custom-python-component-boilerplate

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
data/: _create_config_json.sh  config.json  config.json.dist  user_parameters.json
src/: shapes.py
src/sample_flow/: main.py
