[project]
name = "component-custom-python-example-repo-1"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.150.0",
    "httpx>=0.28.1",
    "keboola-component>=1.6.10"
]

[project.scripts]
kickoff = "sample_flow.main:kickoff"
run_crew = "sample_flow.main:kickoff"
plot = "sample_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sample_flow"]

[tool.crewai]
type = "flow"
